fix styling issue spacing blog list page

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -75,6 +75,10 @@ footer {
     padding-left: 118px;
 }
 
+.blog-post-details {
+    padding-top: 37px;
+}
+
 .blog-image {
     float: right;
     max-width: 400px;
